# opencode-lrs-agents-nbx

./: .coverage  .gitmodules  .lrsgate  .replit  AGENTS.md  CODE_OF_CONDUCT.md  COMPLETE.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NEURALBLITZ_COMPREHENSIVE_ACHIEVEMENTS.md  NEURALBLITZ_OPENCODE_COLLABORATIVE_ACHIEVEMENTS.md  README.md  README_SIMPLE.md  SUMMARY.md  USER_GUIDE.md  advanced_autonomous_agent_framework.py  advanced_autonomous_agent_framework_README.md  autonomous_self_evolution_simplified.py  dimensional_computing_demo.py  docker-compose.yml  docker-stack.yml  gg.md  go.mod  main.py  neuro_symbiotic_demo.py  quantum_foundation_demo.py  server.py  simple_app.py  verify.sh
docs/: API_REFERENCE.md  INSTALLATION.md  README.md
examples/: multiagent_demo.go  test_basic.go
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1a87074e0f960195___init___py.html  z_1a87074e0f960195_ai_assistant_py.html  z_1a87074e0f960195_analytics_py.html  z_1a87074e0f960195_bridge_py.html  z_1a87074e0f960195_config_py.html  z_1a87074e0f960195_coordinator_py.html  z_1a87074e0f960195_example_system_py.html  z_1a87074e0f960195_mesh_network_py.html  z_1a87074e0f960195_optimizer_py.html  (+62 more)
neuralblitz-v50/rust/: .dockerignore  Cargo.toml
neuralblitz-v50/rust/src/: lib.rs  lrs_bridge.rs  main.rs  utils.rs
neuralblitz-v50/rust/src/api/: mod.rs
neuralblitz-v50/rust/src/core/: mod.rs
neuralblitz-v50/rust/src/options/: mod.rs
neuralblitz-v50/rust/src/utils/: mod.rs
(+199 files in other folders)
