[package]
name = "neuralblitz"
version = "50.0.0"
edition = "2021"
authors = ["NeuralBlitz Contributors"]
description = "NeuralBlitz v50.0 - Omega Singularity Intelligence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neuralblitz/neuralblitz"

[[bin]]
name = "neuralblitz"
path = "src/main.rs"

[lib]
name = "neuralblitz"
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

# Cryptographic dependencies
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"

# Web framework (for Option F)
actix-web = "4.4"
actix-rt = "2.9"

# Additional dependencies for API server
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "core_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
